MDEV-8793 Wrong result set for SELECT ...           WHERE COALESCE(time_column)=TIME('00:00:00')             AND COALESCE(time_column)=DATE('2015-09-11') MDEV-8814 Wrong result for WHERE datetime_column > TIME('00:00:00')